--- a/om-oss.html
+++ b/om-oss.html
@@ -26,6 +26,8 @@
     <img class="bottom" width="600px" height="400px" src="/Hemsideprojekt-2/img/hej.jpg" />
     <img class="top" width="600px" height="400px" src="/Hemsideprojekt-2/img/hej2.jpg" />
 </div>
+    <div id="omossfakta">
+        <p>Om oss ska alla ha tillgång till för att kunna veta vad skolan har att erbjuda och varför man borde söka till skolan.</p>
 
 
 
