--- a/omdomen.html
+++ b/omdomen.html
@@ -18,8 +18,9 @@
     <a class="spacer"></a>
     <a href="skolmat.html"><h1>Personal</h1></a>
     <a class="spacer"></a>
-    <a href="betyg.html"><h1>Elevportalen</h1></a>
+    <a href="omdomen.html"><h1>Elevportalen</h1></a>
 </div>
+    <div></div>
 
 
 </body>
