--- a/om-oss.html
+++ b/om-oss.html
@@ -22,12 +22,12 @@
     <a href="betyg.html"><h1>Elevportalen</h1></a>
 </div>
 <div id="leftbar">
+    <div id="omossfakta"></div>
     <div id="cf">
     <img class="bottom" width="600px" height="400px" src="/Hemsideprojekt-2/img/hej.jpg" />
     <img class="top" width="600px" height="400px" src="/Hemsideprojekt-2/img/hej2.jpg" />
 </div>
-    <div id="omossfakta">
-        <p>Om oss ska alla ha tillgång till för att kunna veta vad skolan har att erbjuda och varför man borde söka till skolan.</p>
+
 
 
 
