Början av elevportal

--- a/betyg.html
+++ b/betyg.html
@@ -23,6 +23,12 @@
     <a href="betyg.html"><h1>Elevportalen</h1></a>
 
 </div>
+    <div id="bottombar">
+        <h1 id="titleelevportal">Elevportalen</h1>
+        <div id="leftsideelevportal">
+            <p id="leftsidetitle">Logga in:</p>
+
+</div>
 
 
 </div>
