--- a/omdomen.html
+++ b/omdomen.html
@@ -20,7 +20,11 @@
     <a class="spacer"></a>
     <a href="omdomen.html"><h1>Elevportalen</h1></a>
 </div>
-    <div></div>
+    <div id="bottombar">
+        <h1 id="titleelevportal">Elevportalen</h1>
+
+
+    </div>
 
 
 </body>
